Use correct argument notation for java options in package